--- a/src/scss/components/_cards.scss
+++ b/src/scss/components/_cards.scss
@@ -80,7 +80,7 @@
   &__heading {
     font-size: 3.5rem;
     font-weight: $fw-regular;
-    letter-spacing: 5%;
+    letter-spacing: 0.95px;
   }
 
   &__price-sign {
